--- a/index.html
+++ b/index.html
@@ -1,16 +1,120 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <title>實驗室網頁</title>
-    <link rel="stylesheet" type="text/css" href="lib/Semantic-UI-2.1.4/semantic.min.css"/>
+    <link rel="stylesheet" type="text/css" href="lib/Semantic-UI-2.1.4/semantic.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
+
 <body>
-    
+    <div class="ui large top fixed hidden menu">
+        <div class="ui container">
+            <a class="active item">Home</a>
+            <a class="item">About</a>
+            <a class="item">Activities</a>
+            <a class="item">Members</a>
+            <a class="item">Reports</a>
+            <a class="item">Link&amp;Resorces</a>
+        </div>
+    </div>
+    <!-- Sidebar Menu -->
+    <div class="ui vertical inverted sidebar menu">
+        <a class="active item">Home</a>
+        <a class="item">About</a>
+        <a class="item">Activities</a>
+        <a class="item">Members</a>
+        <a class="item">Reports</a>
+        <a class="item">Link&amp;Resorces</a>
+    </div>
+    <!-- Page Contents -->
+    <div class="pusher">
+        <div class="ui vertical masthead center aligned segment" style="background-image: url('img/_DSC3159.JPG');background-size:cover;background-position:center;background-repeat:no-repeat">
+            <div class="ui container">
+                <div class="ui large secondary pointing menu">
+                    <a class="toc item">
+                        <i class="sidebar icon"></i>
+                    </a>
+                    <a class="active item">Home</a>
+                    <a class="item">About</a>
+                    <a class="item">Activities</a>
+                    <a class="item">Members</a>
+                    <a class="item">Reports</a>
+                    <a class="item">Link&amp;Resorces</a>
+                </div>
+            </div>
+            <div class="ui text container img-header-text">
+                <h1 class="ui header">冠妤實驗室的Lab</h1>
+            </div>
+        </div>
+        <div class="ui vertical stripe segment">
+            <div class="ui middle aligned stackable grid container">
+                <div class="row">
+                    <div class="eight wide column">
+                        <h3 class="ui header">We Help Companies and Companions</h3>
+                        <p>We can give your company superpowers to do things that they never thought possible. Let us delight your customers and empower your needs...through pure data analytics.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="ui inverted vertical footer segment">
+            <div class="ui container">
+                <div class="ui stackable inverted divided equal height stackable grid">
+                    <div class="three wide column">
+                        <h4 class="ui inverted header">About</h4>
+                        <div class="ui inverted link list">
+                            <a href="#" class="item">Sitemap</a>
+                            <a href="#" class="item">Contact Us</a>
+                            <a href="#" class="item">Religious Ceremonies</a>
+                            <a href="#" class="item">Gazebo Plans</a>
+                        </div>
+                    </div>
+                    <div class="three wide column">
+                        <h4 class="ui inverted header">Services</h4>
+                        <div class="ui inverted link list">
+                            <a href="#" class="item">Banana Pre-Order</a>
+                            <a href="#" class="item">DNA FAQ</a>
+                            <a href="#" class="item">How To Access</a>
+                            <a href="#" class="item">Favorite X-Men</a>
+                        </div>
+                    </div>
+                    <div class="seven wide column">
+                        <h4 class="ui inverted header">Footer Header</h4>
+                        <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- JS -->
     <script type="text/javascript" src="lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular/angular-ui-router.min.js"></script>
-    <script type="text/javascript" src="lib/jquery-2.1.3/jquery-2.1.3.min.js"></script>    
+    <script type="text/javascript" src="lib/jquery-2.1.3/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="lib/Semantic-UI-2.1.4/semantic.min.js"></script>
+    <script type="text/javascript">
+    $(document)
+        .ready(function() {
+
+            // fix menu when passed
+            $('.img-header-text')
+                .visibility({
+                    once: false,
+                    onTopPassed: function() {
+                        $('.fixed.menu').transition('fade in');
+                    },
+                    onTopPassedReverse: function() {
+                        $('.fixed.menu').transition('fade out');
+                    }
+                });
+
+            // create sidebar and attach to menu open
+            $('.ui.sidebar')
+                .sidebar('attach events', '.toc.item');
+
+        });
+    </script>
 </body>
+
 </html>
