--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
-<body ng-app="labApp">
+<body ng-app="labApp" ng-controller="navCtrl" ng-init="nav_init()">
     <div class="ui large top fixed hidden menu">
         <div class="ui container">
             <a class="item" ui-sref="home" ui-sref-active="active">Home</a>
@@ -89,28 +89,6 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="lib/jquery-2.1.3/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="lib/Semantic-UI-2.1.4/semantic.min.js"></script>
-    <script type="text/javascript">
-    $(document)
-        .ready(function() {
-
-            // fix menu when passed
-            $('.img-header-text')
-                .visibility({
-                    once: false,
-                    onTopPassed: function() {
-                        $('.fixed.menu').transition('fade in');
-                    },
-                    onTopPassedReverse: function() {
-                        $('.fixed.menu').transition('fade out');
-                    }
-                });
-
-            // create sidebar and attach to menu open
-            $('.ui.sidebar')
-                .sidebar('attach events', '.toc.item');
-
-        });
-    </script>
 </body>
 
 </html>
