--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <script type="text/javascript" src="lib/angular/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/modify.js"></script>
+    <script type="text/javascript" src="js/member.js"></script>
     <script type="text/javascript" src="lib/jquery-2.1.3/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="lib/Semantic-UI-2.1.4/semantic.min.js"></script>
 </body>
