--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="ui vertical stripe segment">
             <div class="ui middle aligned stackable grid container">
-                <div ui-view></div>
+                <div ui-view style="width:100%"></div>
             </div>
         </div>
         <div class="ui inverted vertical footer segment">
@@ -89,6 +89,7 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/modify.js"></script>
     <script type="text/javascript" src="js/member.js"></script>
+    <script type="text/javascript" src="js/about.js"></script>
     <script type="text/javascript" src="lib/jquery-2.1.3/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="lib/Semantic-UI-2.1.4/semantic.min.js"></script>
 </body>
