fix spelling error

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a class="item" ui-sref="activities" ui-sref-active="active">Activities</a>
             <a class="item" ui-sref="members" ui-sref-active="active">Members</a>
             <a class="item" ui-sref="reports" ui-sref-active="active">Reports</a>
-            <a class="item" ui-sref="link_resoreces" ui-sref-active="active">Link&amp;Resorces</a>
+            <a class="item" ui-sref="link_resoreces" ui-sref-active="active">Link&amp;Resources</a>
         </div>
     </div>
     <!-- Sidebar Menu -->
@@ -27,7 +27,7 @@
         <a class="item" ui-sref="activities" ui-sref-active="active">Activities</a>
         <a class="item" ui-sref="members" ui-sref-active="active">Members</a>
         <a class="item" ui-sref="reports" ui-sref-active="active">Reports</a>
-        <a class="item" ui-sref="link_resoreces" ui-sref-active="active">Link&amp;Resorces</a>
+        <a class="item" ui-sref="link_resoreces" ui-sref-active="active">Link&amp;Resources</a>
     </div>
     <!-- Page Contents -->
     <div class="pusher">
@@ -42,7 +42,7 @@
                     <a class="item" ui-sref="activities" ui-sref-active="active">Activities</a>
                     <a class="item" ui-sref="members" ui-sref-active="active">Members</a>
                     <a class="item" ui-sref="reports" ui-sref-active="active">Reports</a>
-                    <a class="item" ui-sref="link_resoreces" ui-sref-active="active">Link&amp;Resorces</a>
+                    <a class="item" ui-sref="link_resoreces" ui-sref-active="active">Link&amp;Resources</a>
                 </div>
             </div>
             <div class="ui text container img-header-text">
