--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <title>實驗室網頁</title>
+    <title>永續資源管理研究室(Sustainable Resource Management Laboratory)</title>
     <link rel="stylesheet" type="text/css" href="lib/Semantic-UI-2.1.4/semantic.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
@@ -13,21 +13,21 @@
     <div class="ui large top fixed hidden menu">
         <div class="ui container">
             <a class="item" ui-sref="home" ui-sref-active="active">Home</a>
-            <a class="item" ui-sref="about" ui-sref-active="active">About</a>
-            <a class="item" ui-sref="activities" ui-sref-active="active">Activities</a>
+            <a class="item" ui-sref="about" ui-sref-active="active">P.I.Profile</a>
             <a class="item" ui-sref="members" ui-sref-active="active">Members</a>
-            <a class="item" ui-sref="reports" ui-sref-active="active">Reports</a>
-            <a class="item" ui-sref="link_resoreces" ui-sref-active="active">Link&amp;Resources</a>
+            <a class="item" ui-sref="courses" ui-sref-active="active">Courses</a>
+            <a class="item" ui-sref="publications" ui-sref-active="active">Publications</a>
+            <a class="item" ui-sref="projects" ui-sref-active="active">Projects</a>
         </div>
     </div>
     <!-- Sidebar Menu -->
     <div class="ui vertical inverted sidebar menu">
         <a class="item" ui-sref="home" ui-sref-active="active">Home</a>
-        <a class="item" ui-sref="about" ui-sref-active="active">About</a>
-        <a class="item" ui-sref="activities" ui-sref-active="active">Activities</a>
+        <a class="item" ui-sref="about" ui-sref-active="active">P.I.Profile</a>
         <a class="item" ui-sref="members" ui-sref-active="active">Members</a>
-        <a class="item" ui-sref="reports" ui-sref-active="active">Reports</a>
-        <a class="item" ui-sref="link_resoreces" ui-sref-active="active">Link&amp;Resources</a>
+        <a class="item" ui-sref="courses" ui-sref-active="active">Courses</a>
+        <a class="item" ui-sref="publications" ui-sref-active="active">Publications</a>
+        <a class="item" ui-sref="projects" ui-sref-active="active">Projects</a>
     </div>
     <!-- Page Contents -->
     <div class="pusher">
@@ -38,15 +38,15 @@
                         <i class="sidebar icon"></i>
                     </a>
                     <a class="item" ui-sref="home" ui-sref-active="active">Home</a>
-                    <a class="item" ui-sref="about" ui-sref-active="active">About</a>
-                    <a class="item" ui-sref="activities" ui-sref-active="active">Activities</a>
+                    <a class="item" ui-sref="about" ui-sref-active="active">P.I.Profile</a>
                     <a class="item" ui-sref="members" ui-sref-active="active">Members</a>
-                    <a class="item" ui-sref="reports" ui-sref-active="active">Reports</a>
-                    <a class="item" ui-sref="link_resoreces" ui-sref-active="active">Link&amp;Resources</a>
+                    <a class="item" ui-sref="courses" ui-sref-active="active">Courses</a>
+                    <a class="item" ui-sref="publications" ui-sref-active="active">Publications</a>
+                    <a class="item" ui-sref="projects" ui-sref-active="active">Projects</a>
                 </div>
             </div>
-            <div class="ui text container img-header-text">
-                <h1 class="ui header">冠妤實驗室的Lab</h1>
+            <div class="ui text img-header-text">
+                <h1 class="ui header" id="header_text">Sustainable Resource Management Laboratory<br />永續資源管理研究室</h1>
             </div>
         </div>
         <div class="ui vertical stripe segment">
