add new column to members

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <title>永續資源管理研究室(Sustainable Resource Management Laboratory)</title>
     <link rel="stylesheet" type="text/css" href="lib/Semantic-UI-2.1.4/semantic.min.css" />
+    <link rel="stylesheet" type="text/css" href="lib/angular/angular-datepicker.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
@@ -86,6 +87,7 @@
     <!-- JS -->
     <script type="text/javascript" src="lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular/angular-ui-router.min.js"></script>
+    <script type="text/javascript" src="lib/angular/angular-datepicker.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/modify.js"></script>
     <script type="text/javascript" src="js/member.js"></script>
