--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <script type="text/javascript" src="js/modify.js"></script>
     <script type="text/javascript" src="js/member.js"></script>
     <script type="text/javascript" src="js/about.js"></script>
+    <script type="text/javascript" src="js/courses.js"></script>
     <script type="text/javascript" src="lib/jquery-2.1.3/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="lib/jquery.smooth-scroll.min.js"></script>
     <script type="text/javascript" src="lib/Semantic-UI-2.1.4/semantic.min.js"></script>
