--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <script type="text/javascript" src="js/courses.js"></script>
     <script type="text/javascript" src="js/home.js"></script>
     <script type="text/javascript" src="js/directive/myDropdown.js"></script>
+    <script type="text/javascript" src="js/publication.js"></script>
     <script type="text/javascript" src="lib/jquery-2.1.3/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="lib/jquery.smooth-scroll.min.js"></script>
     <script type="text/javascript" src="lib/Semantic-UI-2.1.4/semantic.min.js"></script>
