change P.I. to PI

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="ui large top fixed hidden menu">
         <div class="ui container">
             <a class="nav_item item" ui-sref="home" ui-sref-active="active">Home</a>
-            <a class="nav_item item" ui-sref="about" ui-sref-active="active">P.I.Profile</a>
+            <a class="nav_item item" ui-sref="about" ui-sref-active="active">PI Profile</a>
             <a class="nav_item item" ui-sref="members" ui-sref-active="active">Members</a>
             <a class="nav_item item" ui-sref="courses" ui-sref-active="active">Courses</a>
             <a class="nav_item item" ui-sref="publications" ui-sref-active="active">Publications</a>
@@ -24,7 +24,7 @@
     <!-- Sidebar Menu -->
     <div class="ui vertical inverted sidebar menu">
         <a class="item" ui-sref="home" ui-sref-active="active">Home</a>
-        <a class="item" ui-sref="about" ui-sref-active="active">P.I.Profile</a>
+        <a class="item" ui-sref="about" ui-sref-active="active">PI Profile</a>
         <a class="item" ui-sref="members" ui-sref-active="active">Members</a>
         <a class="item" ui-sref="courses" ui-sref-active="active">Courses</a>
         <a class="item" ui-sref="publications" ui-sref-active="active">Publications</a>
@@ -39,7 +39,7 @@
                         <i class="sidebar icon"></i>
                     </a>
                     <a class="nav_item item" ui-sref="home" ui-sref-active="active">Home</a>
-                    <a class="nav_item item" ui-sref="about" ui-sref-active="active">P.I.Profile</a>
+                    <a class="nav_item item" ui-sref="about" ui-sref-active="active">PI Profile</a>
                     <a class="nav_item item" ui-sref="members" ui-sref-active="active">Members</a>
                     <a class="nav_item item" ui-sref="courses" ui-sref-active="active">Courses</a>
                     <a class="nav_item item" ui-sref="publications" ui-sref-active="active">Publications</a>
