--- a/index.html
+++ b/index.html
@@ -58,27 +58,17 @@
         <div class="ui inverted vertical footer segment">
             <div class="ui container">
                 <div class="ui stackable inverted divided equal height stackable grid">
-                    <div class="three wide column">
-                        <h4 class="ui inverted header">About</h4>
-                        <div class="ui inverted link list">
-                            <a href="#" class="item">Sitemap</a>
-                            <a href="#" class="item">Contact Us</a>
-                            <a href="#" class="item">Religious Ceremonies</a>
-                            <a href="#" class="item">Gazebo Plans</a>
-                        </div>
+                    <div class="five wide column">
+                        <p>106台北市大安區舟山路71號206室<br />
+                        Room 206, 71 Chou-Shan Rd., Taipei 106, Taiwan.</p>
                     </div>
                     <div class="three wide column">
-                        <h4 class="ui inverted header">Services</h4>
-                        <div class="ui inverted link list">
-                            <a href="#" class="item">Banana Pre-Order</a>
-                            <a href="#" class="item">DNA FAQ</a>
-                            <a href="#" class="item">How To Access</a>
-                            <a href="#" class="item">Favorite X-Men</a>
-                        </div>
+                        <p>ptchueh@ntu.edu.tw<br />
+                        Tel 886-2-3366-2798<br />
+                        Fax 886-2-2392-8830</p>
                     </div>
-                    <div class="seven wide column">
-                        <h4 class="ui inverted header">Footer Header</h4>
-                        <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
+                    <div class="eight wide column">
+                        <p>© Sustainable Resource Management Laboratory, GIEE, NTU. All rights reserved.<br />任何形式之轉載，請先與網頁管理者聯繫 2016.01 Updated</p>
                     </div>
                 </div>
             </div>
